Fix some more spacing issues

--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -35,12 +35,6 @@
 }
 
 .post-content {
-  a {
-    transition: .3s opacity ease;
-    &:hover {
-      opacity: 0.5;
-    }
-  }
   img {
     max-width: 100%;
   }
