--- a/assets/sass/_spacing.scss
+++ b/assets/sass/_spacing.scss
@@ -29,6 +29,10 @@
   margin-top: 1rem;
 }
 
+.mt-2 {
+  margin-top: 2rem;
+}
+
 .p-0 {
   padding: 0;
 }
